--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-draft-wysiwyg": "^1.14.7",
     "react-intl": "^5.24.3",
+    "react-js-banner": "^0.6.0-beta3",
     "react-select": "^3.2.0",
     "react-signature-canvas": "^1.0.3",
     "react-textarea-autosize": "^7.1.2",
